--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.11.3)
 
 # set(CMAKE_CXX_STANDARD 17)
-project(OSM_A_star_search)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -pthread")
+project(traffic_simulation)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
 
 find_package(OpenCV 4.1 REQUIRED)
 
@@ -16,3 +16,4 @@ file(GLOB project_SRCS src/*.cpp) #src/*.h
 # Add project executable
 add_executable(traffic_simulation ${project_SRCS})
 target_link_libraries(traffic_simulation ${OpenCV_LIBRARIES})
+target_link_libraries( traffic_simulation pthread )
